--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+# MySQL properties
+spring.datasource.url=jdbc:mysql://localhost:3306/security?verifyServerCertificate=false&allowPublicKeyRetrieval=true&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.username=root
+spring.datasource.password=1111
+spring.web.resources.add-mappings=true
+# Hibernate properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
